deploy: fdc370faeefc3a44502381747461b6ceda98e804

--- a/the_machinery_book/editing_workflows/animation/animation-state-machine.html
+++ b/the_machinery_book/editing_workflows/animation/animation-state-machine.html
@@ -149,7 +149,7 @@
                         <h3 id="animation-state-machines"><a class="header" href="#animation-state-machines">Animation state machines</a></h3>
 <p>The <em>Animation State Machine Asset</em> represents an <em>Animation State Machine</em>. If you double-click an
 Animation State Machine Asset in the Asset Browser, an Animation State Machine Editor will open:</p>
-<p><img src="https://www.dropbox.com/s/fdte16tqekqhev6/asm-editor.png?dl=1" alt="Animation State Machine Editor" /></p>
+<p><img src="#" alt="Animation State Machine Editor" /></p>
 <p>The Animation State Machine (ASM) introduces a number of concepts: <em>Layers</em>, <em>States</em>,
 <em>Transitions</em>, <em>Events</em>, <em>Variables</em>, and <em>Blend Sets</em>.</p>
 <p>The ASM represents a complex animation setup with multiple animations that can be played on a
@@ -207,7 +207,7 @@ the layers below it shine through.</p>
 <p>Allows you to make a 1D or 2D blend between animations based on the value of variables. This is often
 used for locomotion. You can use different animations based on the characters running speed and whether
 the character is turning left or right and position them on a map to blend between them.</p>
-<p><img src="https://www.dropbox.com/s/p9yc7qyoaml4l70/animation-blending.png?dl=1" alt="Animation Blending" /></p>
+<p><img src="#" alt="Animation Blending" /></p>
 <p>Once you have created an Animation State Machine, you can assign it to a character by giving it an
 Animation State Machine Component.</p>
 <p>For an example of how the animation system works, have a look at the <code>mannequin</code> sample project.</p>
