--- a/the_machinery_book/editing_workflows/physics.html
+++ b/the_machinery_book/editing_workflows/physics.html
@@ -184,7 +184,7 @@ Entities with shape components will collide with each other when physics is simu
 <p>A physics shape can either be specified as geometry (sphere, capsule, plane, box) or it can be
 computed from a graphics mesh (convex, mesh). Note that if you use computed geometry, you must press
 the <strong>Cook</strong> button in the Properties UI to explicitly compute the geometry for the object.</p>
-<p><img src="https://www.dropbox.com/s/v5jnthc50vsa1oi/convex-physics-shape.png?dl=1" alt="Convex shape." /></p>
+<p><img src="#" alt="Convex shape." /></p>
 <p>If you just give an entity a <em>Physics Shape Component</em> it will become a static physics object. Other
 moving objects can still collide with it, but the object itself won't move.</p>
 <p>To create a moving physics object, you need to add a <em>Physics Body Component</em>. The body component
@@ -244,7 +244,7 @@ projects.</p>
 <em>Out</em> event multiple times, each time with one of the result objects. (In the future we might change
 this and have the nodes actually return arrays of objects.)</p>
 </blockquote>
-<p>From C you can access those features via the <a href="https://ourmachinery.com/apidoc/plugins/physx/physx_scene.h.html#structtm_physx_scene_api"><code>tm_physx_scene_api</code></a>.</p>
+<p>From C you can access those features via the <a href="https://ourmachinery.com/apidoc/plugins/physx/physx_scene.h.html#structtm_physx_scene_api">tm_physx_scene_api</a>.</p>
 <h2 id="missing-features"><a class="header" href="#missing-features">Missing Features</a></h2>
 <p>Note that The Machinery doesn't currently support all the features found in PhysX. The most
 glaring omissions are:</p>
