--- a/the_machinery_book/gameplay_coding/ecs/index.html
+++ b/the_machinery_book/gameplay_coding/ecs/index.html
@@ -180,7 +180,7 @@ must be copied over to the new type.</li>
 </ul>
 <h2 id="components"><a class="header" href="#components">Components</a></h2>
 <ul>
-<li>A component is defined by <code>tm_component_i</code> — it consists of a fixed-size piece of POD data.</li>
+<li>A component is defined by <a href="https://ourmachinery.com/apidoc/plugins/entity/entity.h.html#structtm_component_i">tm_component_i</a> — it consists of a fixed-size piece of POD data.</li>
 <li>This data is stored in a huge buffer for each entity type, and indexed by the index.</li>
 <li>In addition, a component can have a <em>manager</em>. The manager is notified when the component is added
 or removed.</li>
