--- a/the_machinery_book/getting_started/index.html
+++ b/the_machinery_book/getting_started/index.html
@@ -160,7 +160,7 @@
 <p>Quick steps to get up and running:</p>
 <ol>
 <li>
-<p>Download The Machinery at <a href="https://ourmachinery.com/download.html.">https://ourmachinery.com/download.html</a>.</p>
+<p>Download The Machinery at <a href="https://ourmachinery.com/download.html">https://ourmachinery.com/download.html</a>.</p>
 </li>
 <li>
 <p>Sign up for an <a href="https://ourmachinery.com/">ourmachinery.com</a> account <a href="https://ourmachinery.com/sign-up.html">here</a>. (It's free!)</p>
