--- a/the_machinery_book/qa_pipeline/index.html
+++ b/the_machinery_book/qa_pipeline/index.html
@@ -164,7 +164,7 @@
 <p>The profiler tab will display all scopes that have been added to the profiler API. With the tab, you can record for a few moments all scopes and then afterward analyze them.</p>
 <p><img src="https://paper-attachments.dropbox.com/s_5086E710AFB88B222C81207791AF7092731DB9D2900AFABEA044A0AC0B80DFFB_1625602954215_image.png" alt="" /></p>
 <p>You can use the profiler API defined in the <a href="https://ourmachinery.com/apidoc/foundation/profiler.h.html#profiler.h">foundation/profiler</a>.h. in your own projects.
-After you have loaded the <a href="https://ourmachinery.com/apidoc/foundation/profiler.h.html#structtm_profiler_api"><code>tm_profiler_api</code></a> in your plugin load function.</p>
+After you have loaded the [<a href="https://ourmachinery.com/apidoc/foundation/profiler.h.html#structtm_profiler_api">tm_profiler_api</a>](https://ourmachinery.com/apidoc/foundation/profiler.h.html#structtm_profiler_api) in your plugin load function.</p>
 <table><thead><tr><th>Profiler Macros</th></tr></thead><tbody>
 <tr><td><strong><a href="https://ourmachinery.com/apidoc/foundation/profiler.h.html#tm_profiler_begin_func_scope()">TM_PROFILER_BEGIN_FUNC_SCOPE()</a> / <a href="https://ourmachinery.com/apidoc/foundation/profiler.h.html#tm_profiler_end_func_scope()">TM_PROFILER_END_FUNC_SCOPE()</a></strong></td></tr>
 <tr><td>Starts a profiling scope for the current function. The scope in the profiler will have this name.</td></tr>
