--- a/tutorials/creation_graph/index.html
+++ b/tutorials/creation_graph/index.html
@@ -150,7 +150,7 @@
 <p>In The Machinery, we provide full control over how data enters the engine and what data-processing
 steps that get executed, allowing technical artists to better optimize content and setup custom,
 game-specific asset pipelines. </p>
-<p>This is handled through <em>Creation Graphs</em>. A <em>Creation Graph</em> is essentially a generic framework for
+<p>This is handled through <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//creation_graphs/concept.html"><em>Creation Graphs</em></a>. A <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//creation_graphs/concept.html"><em>Creation Graphs</em></a> is essentially a generic framework for
 processing arbitrary data on the CPUs and GPUs, exposed through a graph front-end view. While we can
 use <em>Creation Graphs</em> for any type of data processing.</p>
 <p>The following section will guide you from basic use cases to more advanced use cases.</p>
