--- a/tutorials/ui/build_custom_ui_controls/index.html
+++ b/tutorials/ui/build_custom_ui_controls/index.html
@@ -150,9 +150,9 @@
 <p>These walkthroughs we will teach you how to extend The Machinery's <a href="https://ourmachinery.com/apidoc/plugins/ui">UI system</a>.</p>
 <p>In following following parts 1 - 3 we will cover the following topics:</p>
 <ul>
-<li><a href="https://ourmachinery.github.io/themachinery-books/tutorials//tutorials/ui/build_custom_ui_controls/part1.html">Create a custom circular button</a></li>
-<li><a href="https://ourmachinery.github.io/themachinery-books/tutorials//tutorials/ui/build_custom_ui_controls/part2.html">Add a texture to our custom control</a></li>
-<li><a href="https://ourmachinery.github.io/themachinery-books/tutorials//tutorials/ui/build_custom_ui_controls/part3.html">Setup a UI Renderer</a></li>
+<li><a href="https://ourmachinery.github.io/themachinery-books/tutorials//ui/build_custom_ui_controls/part1.html">Create a custom circular button</a></li>
+<li><a href="#">Add a texture to our custom control</a></li>
+<li><a href="#">Setup a UI Renderer</a></li>
 </ul>
 
                     </main>
