--- a/the_machinery_book/getting_started/troubleshooting.html
+++ b/the_machinery_book/getting_started/troubleshooting.html
@@ -164,7 +164,7 @@
 <h2 id="where-to-report-bugs-or-feedback"><a class="header" href="#where-to-report-bugs-or-feedback">Where to report bugs or feedback</a></h2>
 <ol>
 <li>If you have any problems running the software, encounter crashes, etc, report them on our <a href="https://github.com/OurMachinery/themachinery-public/issues">public bug tracker</a> as soon as possible. We will fix bugs as soon as we can and provide updated executables for download on the website.</li>
-<li>If you have other feedback or questions, post them on our <a href="http://forums.ourmachinery.com/c/beta">forum</a>. We appreciate candid, honest opinions.</li>
+<li>If you have other feedback or questions, post them on our <a href="https://github.com/OurMachinery/themachinery-public/discussions">forum</a>. We appreciate candid, honest opinions.</li>
 </ol>
 <p>Note that you need to create a separate login to log in to the forum. (We might unify the logins in the future.)
 You can also drop in on our <a href="https://discord.gg/SHHSZaH">Discord Server</a>. You will frequently find us there, answering questions. We'll pay special attention on Thursdays.</p>
